# ImageSorter

./: .gitignore  CMakeLists.txt  GUIDiagram.drawio  ImageSorterGUI.cpp  ImageSorterGUI.hpp  ImageSorterOperations.cpp  ImageSorterOperations.hpp  LICENSE  README.md  main.cpp  resources.rc.in
